# content-engine

./: .gitignore  Makefile  QUICKSTART.md  README.md
backend/: .gitignore  .review_session.json  Makefile  README.md  USAGE.md  pyproject.toml  pytest.ini  review  test_manual.sh
backend/scripts/: add_stylistic_sources_cli.sh  create_content_options_for_topics.py  create_test_script_data.py  ingest_stylistic_sources.py  run_and_verify.py  test_backend_services.py  test_scoring.py  verify_data_local.py
backend/src/: __init__.py
backend/src/cli/: README.md  __init__.py  main.py  review.py  review_utils.py
backend/src/content/: __init__.py  audit_service.py  ingestion_service.py  models.py  prompt_enhancement_service.py  review_service.py  scoring_service.py  script_refinement_service.py  style_curation_service.py  style_extraction_service.py  stylistic_source_ingestion_service.py
backend/src/core/: __init__.py  config.py  logging.py  types.py
backend/src/infra/: __init__.py  firestore_service.py  gcs_service.py  openai_service.py
backend/src/jobs/: __init__.py  cloud_job_runner.py  job_tracker.py  topic_ingestion_job.py  topic_scoring_job.py
backend/tests/: MANUAL_TESTING_GUIDE.md  conftest.py  run_tests.sh
backend/tests/content/: test_content_option_model.py  test_ingestion_service.py  test_script_refinement_service.py  test_stylistic_source_ingestion_service.py
backend/tests/fixtures/: scoring_test_topics.py
backend/tests/integration/: test_end_to_end.py
backend/tests/jobs/: __init__.py  test_topic_ingestion_job.py
docs/: ARCHITECTURE.md  (+5 more)
(+86 files in other folders)
