[tool.poetry]
name = "content-engine-backend"
version = "0.1.0"
description = "AI-powered content intelligence and production system backend"
authors = ["Content Engine Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
openai = "^1.95.0"
google-cloud-firestore = "^2.16.0"
google-cloud-storage = "^2.10.0"
python-dotenv = "^1.0.0"
typer = {extras = ["all"], version = "^0.12.0"}
httpx = "^0.27.0"
feedparser = "^6.0.10"
google-cloud-secret-manager = "^2.25.0"
rich = "^13.7.0"
questionary = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.2"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

